@@ -1,4 +1,4 @@
-/* $Id: openbsd-compat.h,v 1.7 2001/06/10 17:24:53 mouring Exp $ */
+/* $Id: openbsd-compat.h,v 1.8 2001/06/25 08:09:17 djm Exp $ */
 
 #ifndef _OPENBSD_H
 #define _OPENBSD_H
@@ -28,6 +28,7 @@
 #include "getgrouplist.h"
 #include "glob.h"
 #include "getusershell.h"
+#include "readpassphrase.h"
 
 /* Home grown routines */
 #include "bsd-arc4random.h"
